--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
     - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
     before_deploy:
     # Set up git user name and tag this commit
-    - git config --local user.name "GroupNumber-21"
+    - git config --local user.name "40326125"
     - git config --local user.email "40326125@live.napier.ac.uk"
     # Create temporary tag from date and Git log.
     - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y-%m-%d')-$(git log --format=%h -1)}
